Actions
Bug #11656
closedSMB share names appear as all lowercase
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
SMB shares names appear as all lowercase regardless of how their name is formatted.
To reproduce the issue:
Create a share with a name which contains uppercase characters:
zfs create -o sharesmb=name=TestShare rpool/testshare
Connect to the SMB server from a Mac client without specifying any share my name. You will be presented with a list of shares, all of which will be lowercase.
Updated by Andrew Stormont almost 3 years ago
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
git commit 0237b6992139d8334d00225b8f228740703fbbdd
commit 0237b6992139d8334d00225b8f228740703fbbdd Author: Andrew Stormont <astormont@racktopsystems.com> Date: 2019-09-12T15:02:05.000Z 11656 SMB share names appear as all lowercase Reviewed by: Albert Lee <alee@racktopsystems.com> Reviewed by: Garrett D'Amore <gdamore@racktopsystems.com> Reviewed by: Vitaliy Gusev <vgusev@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gordon Ross <gwr@nexenta.com> Approved by: Gordon Ross <gwr@nexenta.com>
Updated by Gordon Ross almost 3 years ago
Testing: (per description)
Share names are now listed in the correct case.
Specifying the share name still works even if the case is wrong.
Actions