11656 SMB share names appear as all lowercase Reviewed by: Albert Lee <alee@racktopsystems.com> Reviewed by: Garrett D'Amore <gdamore@racktopsystems.com> Reviewed by: Vitaliy Gusev <vgusev@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gordon Ross <gwr@nexenta.com> Approved by: Gordon Ross <gwr@nexenta.com>